# solana-gadgets

./: .gitignore  LICENSE  README.md
bash/: README.md
docs/: SAD_SPEC.md
python/: README.md
python/sad/: README.md  requirements.txt  sad.py
python/sad/descriptors/: SampGgdt3wioaoMZhC6LTSbg4pnuvQnSfJpDYeuXQBv.yml
python/sad/src/: cmdline.py  config.py  datadeser.py  funk.py  sad.py  sad_account.py
python/sad/tests/unit/: sad_tests.py  test_config.py  test_datadeser.py  test_sad_account.py
rust/: Cargo.toml  README.md
rust/gadgets-common/: Cargo.toml
rust/gadgets-common/src/: lib.rs  sol_txns.rs
rust/gadgets-scfs/: Cargo.toml
rust/gadgets-scfs/src/: lib.rs  scfs_errors.rs
rust/gadgets-scfs10/: Cargo.toml
rust/sad/: Cargo.toml  README.md
rust/sad/src/: clparse.rs  datainst.rs  datamap.rs  desertree.rs  errors.rs  junk.rs  loader.rs  main.rs  sad_errors.rs  sadout.rs  sadtypes.rs  solq.rs
rust/scfs-program/: Cargo.toml
rust/scfs-program/src/: lib.rs
rust/scfs-program/tests/: README.md  cu_test.rs
rust/scfsd/: Cargo.toml  README.md  wc
rust/scfsd/src/: clparse.rs  main.rs  utils.rs
rust/yaml_samps/: hbclisamp.yml  hbclisamp_bad.yml  runner.yml  test.yml
samples/yamldecls/: SampGgdt3wioaoMZhC6LTSbg4pnuvQnSfJpDYeuXQBv.yml
