[package]
name = "gadgets-scfs"
description="Solana Cluster Feature Sets"
repository = "https://github.com/FrankC01/solana-gadgets/tree/main/rust"
categories = ["command-line-utilities", "solana"]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
semver = "1.0.4"
solana-client = "1.10.4"
solana-sdk = "1.10.4"
thiserror = "1.0.30"
