[package]
name = "gadgets-scfs10"
description="Solana Cluster Feature Sets"
repository = "https://github.com/FrankC01/solana-gadgets/tree/main/rust"
categories = ["command-line-utilities", "solana"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
semver = "1.0.4"
solana-client = {path = "../../../solana/client", version = "=1.10.0"}
solana-sdk = {path = "../../../solana/sdk", version = "=1.10.0"}
thiserror = "1.0.30"
