[package]
name = "sad"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.6"
base64 = "0.13.0"
borsh = "0.9.1"
clap = "2.34.0"
downcast-rs = "1.2.0"
gadgets-common = {version = "0.1.0", path = "../gadgets-common"}
lazy_static = "1.4.0"
linked-hash-map = "0.5.3"
serde_json = "1.0.74"
solana-clap-utils = "1.10.32"
solana-cli-config = "1.10.32"
solana-client = "1.10.32"
solana-logger = "1.10.32"
solana-remote-wallet = "1.10.32"
solana-sdk = "1.10.32"
thiserror = "1.0.30"
yaml-rust = "0.4.5"
strum = { version = "0.24.1", features = ["derive"] }
