[package]
name = "scfs-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test-bpf = []

[dependencies]
solana-program = "1.9.6"


[dev-dependencies]
assert_matches = "1.4.0"
gadgets-scfs = {version="0.2.0", path="../gadgets-scfs"}
solana-client = "1.9.6"
solana-program-test = "1.9.6"
solana-sdk = "1.9.6"
solana-logger = "1.9.6"
solana-test-validator =  "1.9.6"


[lib]
crate-type = ["cdylib", "lib"]
