[package]
name = "scfs-program"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test-bpf = []

[dependencies]
solana-program = "1.10.32"


[dev-dependencies]
assert_matches = "1.5.0"
gadgets-scfs = {version="0.2.0", path="../gadgets-scfs"}
solana-client = "~1.14"
solana-program-test = "~1.14"
solana-sdk = "~1.14"
solana-logger = "~1.14"
solana-test-validator =  "~1.14"


[lib]
crate-type = ["cdylib", "lib"]
